--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -30,6 +30,7 @@
 
       .account__section-headline
         = active_link_to t('accounts.posts_tab_heading'), short_account_url(@account)
+        = active_link_to t('accounts.posts_with_reblogs'), short_account_with_reblogs_url(@account)
         = active_link_to t('accounts.posts_with_replies'), short_account_with_replies_url(@account)
         = active_link_to t('accounts.media'), short_account_media_url(@account)
 
