--- a/app/views/settings/preferences/show.html.haml
+++ b/app/views/settings/preferences/show.html.haml
@@ -53,6 +53,7 @@
 
   .fields-group
     = f.input :setting_aggregate_reblogs, as: :boolean, wrapper: :with_label
+    = f.input :setting_home_dms, as: :boolean, wrapper: :with_label
 
   .fields-group
     = f.input :setting_auto_play_gif, as: :boolean, wrapper: :with_label
