--- a/app/views/admin/settings/edit.html.haml
+++ b/app/views/admin/settings/edit.html.haml
@@ -20,6 +20,9 @@
       = f.input :site_contact_email, wrapper: :with_label, label: t('admin.settings.contact_information.email')
 
   .fields-group
+    = f.input :max_bio_chars, as: :integer, wrapper: :with_label, label: t('admin.settings.max_bio_chars.title'), hint: t('admin.settings.max_bio_chars.desc_html')
+
+  .fields-group
     = f.input :max_toot_chars, as: :integer, wrapper: :with_label, label: t('admin.settings.max_toot_chars.title'), hint: t('admin.settings.max_toot_chars.desc_html')
 
   .fields-group
