--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -735,7 +735,7 @@
 
   h1,
   h2 {
-    font-weight: 500;
+    font-weight: 700;
     font-size: 18px;
   }
 
@@ -743,14 +743,26 @@
     font-size: 16px;
   }
 
+  h3,
+  h4,
+  h5 {
+    font-weight: 500;
+  }
+
   blockquote {
-    margin-left: 20px;
-    color: $dark-text-color;
+    padding-left: 10px;
+    border-left: 3px solid $darker-text-color;
+    color: $darker-text-color;
+    white-space: normal;
+
+    p:last-child {
+      margin-bottom: 0;
+    }
   }
 
   b,
   strong {
-    font-weight: 500;
+    font-weight: 700;
   }
 
   em,
@@ -761,6 +773,10 @@
   ul,
   ol {
     margin-left: 1em;
+
+    p {
+      margin: 0;
+    }
   }
 
   ul {
