Adding full Article support
This creates a new column in the `statuses` table which keeps track of
activity_pub_type, so in the case of a Note it will be blank (the
default) and it will be a string "Article" if the received remote object
is an AP Article. There is now a bunch of special case code in the
formatters and sanitizers to handle Articles differently, as well as on
the clientside.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -773,6 +773,7 @@
   ul,
   ol {
     margin-left: 1em;
+    margin-bottom: 1em;
 
     p {
       margin: 0;
@@ -839,6 +840,10 @@
     &.status__content__text--visible {
       display: block;
     }
+  }
+
+  .article-type img {
+    max-width: 95%;
   }
 }
 
