--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2125,10 +2125,6 @@ a.account__display-name {
   }
 
   @media screen and (min-width: 630px) {
-    .search__input {
-      font-size: 14px;
-    }
-
     .detailed-status {
       padding: 15px;
 
@@ -2177,6 +2173,34 @@ a.account__display-name {
       &__action-bar,
       .video-player {
         margin-top: 10px;
+      }
+    }
+
+    .account {
+      padding: 15px 10px;
+    }
+
+    .notification {
+      &__message {
+        margin-left: 48px + 15px * 2;
+        padding-top: 15px;
+      }
+
+      &__favourite-icon-wrapper {
+        left: -32px;
+      }
+
+      .status {
+        padding-top: 8px;
+      }
+
+      .account {
+        padding-top: 8px;
+      }
+
+      .account__avatar-wrapper {
+        margin-left: 17px;
+        margin-right: 15px;
       }
     }
   }
@@ -2236,7 +2260,7 @@ a.account__display-name {
     display: none;
   }
 
-  .drawer .search {
+  .search-page .search {
     display: none;
   }
 }
@@ -2258,7 +2282,7 @@ a.account__display-name {
 
   &__badge {
     position: absolute;
-    right: -13px;
+    left: 9px;
     top: -13px;
     background: $ui-highlight-color;
     border: 2px solid lighten($ui-base-color, 8%);
@@ -2271,6 +2295,10 @@ a.account__display-name {
   }
 }
 
+.column-link--transparent .icon-with-badge__badge {
+  border-color: darken($ui-base-color, 8%);
+}
+
 .compose-panel {
   width: 285px;
   margin-top: 10px;
@@ -2280,7 +2308,7 @@ a.account__display-name {
 
   .search__input {
     line-height: 18px;
-    font-size: 14px;
+    font-size: 16px;
     padding: 15px;
     padding-right: 30px;
   }
@@ -2301,6 +2329,13 @@ a.account__display-name {
 
 .navigation-panel {
   margin-top: 10px;
+
+  hr {
+    border: 0;
+    background: transparent;
+    border-top: 1px solid lighten($ui-base-color, 4%);
+    margin: 0;
+  }
 }
 
 .drawer__pager {
@@ -2351,15 +2386,6 @@ a.account__display-name {
   @media screen and (min-height: 640px) {
     display: block;
   }
-}
-
-.navigational-toggle {
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 14px;
-  color: $dark-text-color;
 }
 
 .pseudo-drawer {
