Revert "Add responsive panels to the single-column layout"
This reverts commit aa5faee3b0344e04493ee22868f09f468d0b2ce1.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2105,19 +2105,9 @@ a.account__display-name {
     padding: 0;
   }
 
+  .search__input,
   .autosuggest-textarea__textarea {
     font-size: 16px;
-  }
-
-  .search__input {
-    line-height: 18px;
-    font-size: 16px;
-    padding: 15px;
-    padding-right: 30px;
-  }
-
-  .search__icon .fa {
-    top: 15px;
   }
 
   @media screen and (min-width: 360px) {
@@ -2125,10 +2115,6 @@ a.account__display-name {
   }
 
   @media screen and (min-width: 630px) {
-    .search__input {
-      font-size: 14px;
-    }
-
     .detailed-status {
       padding: 15px;
 
@@ -2182,30 +2168,6 @@ a.account__display-name {
   }
 }
 
-.floating-action-button {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 3.9375rem;
-  height: 3.9375rem;
-  bottom: 1.3125rem;
-  right: 1.3125rem;
-  background: darken($ui-highlight-color, 3%);
-  color: $white;
-  border-radius: 50%;
-  font-size: 21px;
-  line-height: 21px;
-  text-decoration: none;
-  box-shadow: 2px 3px 9px rgba($base-shadow-color, 0.4);
-
-  &:hover,
-  &:focus,
-  &:active {
-    background: lighten($ui-highlight-color, 7%);
-  }
-}
-
 @media screen and (min-width: 360px) {
   .tabs-bar {
     margin: 10px auto;
@@ -2224,30 +2186,7 @@ a.account__display-name {
   }
 }
 
-@media screen and (max-width: 600px + (285px * 1) + (10px * 1)) {
-  .columns-area__panels__pane--compositional {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 600px + (285px * 1) + (10px * 1)) {
-  .floating-action-button,
-  .tabs-bar__link.optional {
-    display: none;
-  }
-
-  .drawer .search {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 600px + (285px * 2) + (10px * 2)) {
-  .columns-area__panels__pane--navigational {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 600px + (285px * 2) + (10px * 2)) {
+@media screen and (min-width: 630px) {
   .tabs-bar {
     display: none;
   }
@@ -2272,10 +2211,6 @@ a.account__display-name {
 }
 
 .compose-panel {
-<<<<<<< HEAD
-=======
-  width: 285px;
->>>>>>> ca087f339... Add responsive panels to the single-column layout
   margin-top: 10px;
   display: flex;
   flex-direction: column;
@@ -5684,6 +5619,34 @@ noscript {
     height: 100%;
     top: 0;
     left: 0;
+  }
+}
+
+.floating-action-button {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3.9375rem;
+  height: 3.9375rem;
+  bottom: 1.3125rem;
+  right: 1.3125rem;
+  background: darken($ui-highlight-color, 3%);
+  color: $white;
+  border-radius: 50%;
+  font-size: 21px;
+  line-height: 21px;
+  text-decoration: none;
+  box-shadow: 2px 3px 9px rgba($base-shadow-color, 0.4);
+
+  &:hover,
+  &:focus,
+  &:active {
+    background: lighten($ui-highlight-color, 7%);
+  }
+
+  @media screen and (min-width: 630px) {
+    display: none;
   }
 }
 
