--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2204,10 +2204,37 @@ a.account__display-name {
 
   .flex-spacer {
     background: transparent;
+    flex: 1 1 auto;
+  }
+
+  .compose-form {
+    flex: 1;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .autosuggest-input {
+    padding-bottom: 11px;
+  }
+
+  .emoji-picker-dropdown {
+    position: relative;
+    top: 5px;
+    left: 234px;
+    z-index: 1;
+    width: 0;
+    height: 0;
+  }
+
+  .compose-form__autosuggest-wrapper {
+    overflow-y: auto;
+    background-color: white;
+    border-radius: 4px 4px 0 0;
   }
 
   .autosuggest-textarea__textarea {
-    max-height: 200px;
+    overflow-y: hidden;
   }
 
   .compose-form__upload-thumbnail {
