Fix Color literals white to

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2229,7 +2229,7 @@ a.account__display-name {
 
   .compose-form__autosuggest-wrapper {
     overflow-y: auto;
-    background-color: white;
+    background-color: $white;
     border-radius: 4px 4px 0 0;
   }
 
