Added settings headers and moved language below the other options to make the preferences page a bit easier to read.

--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -12,6 +12,14 @@ code {
 }
 
 .simple_form {
+
+  .heading {
+    font-size: 25px;
+    margin-bottom: 20px;
+    color: $darker-text-color;
+    font-weight: 700;
+  }
+
   .input {
     margin-bottom: 15px;
     overflow: hidden;
