Change compose-panel to scrollable

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2186,6 +2186,7 @@ a.account__display-name {
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: auto;
 
   .search__input {
     line-height: 18px;
