--- a/app/javascript/styles/mastodon-light/diff.scss
+++ b/app/javascript/styles/mastodon-light/diff.scss
@@ -28,6 +28,10 @@ html {
   background: $white;
   border: 1px solid lighten($ui-base-color, 8%);
 
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+  }
+
   &--slim-button {
     border: 0;
     top: -49px;
@@ -84,6 +88,10 @@ html {
 .getting-started .navigation-bar {
   border-top: 1px solid lighten($ui-base-color, 8%);
   border-bottom: 1px solid lighten($ui-base-color, 8%);
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+  }
 }
 
 .compose-form__autosuggest-wrapper,
@@ -98,6 +106,13 @@ html {
 .box-widget textarea,
 .statuses-grid .detailed-status {
   border: 1px solid lighten($ui-base-color, 8%);
+}
+
+.search__input {
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+    border-bottom: 0;
+  }
 }
 
 .list-editor .search .search__input {
@@ -360,6 +375,10 @@ html {
   border: 1px solid lighten($ui-base-color, 8%);
   border-bottom: 0;
 
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+  }
+
   &__link {
     padding-bottom: 14px;
     border-bottom-width: 1px;
@@ -399,6 +418,12 @@ html {
 .landing-page__information.contact-widget {
   background: $white;
   border: 1px solid lighten($ui-base-color, 8%);
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+  }
 }
 
 .landing .hero-widget__text {
@@ -406,10 +431,26 @@ html {
   border-bottom: 0;
 }
 
+.simple_form {
+  input[type=text],
+  input[type=number],
+  input[type=email],
+  input[type=password],
+  textarea {
+    &:hover {
+      border-color: lighten($ui-base-color, 12%);
+    }
+  }
+}
+
 .landing .hero-widget__footer {
   background: $white;
   border: 1px solid lighten($ui-base-color, 8%);
   border-top: 0;
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border: 0;
+  }
 }
 
 .brand__tagline {
@@ -421,6 +462,10 @@ html {
   &:active,
   &:focus {
     background: $ui-base-color;
+  }
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border: 0;
   }
 }
 
@@ -548,6 +593,10 @@ html {
 .public-layout {
   .account__section-headline {
     border: 1px solid lighten($ui-base-color, 8%);
+
+    @media screen and (max-width: $no-gap-breakpoint) {
+      border-top: 0;
+    }
   }
 
   .header,
@@ -565,6 +614,10 @@ html {
   .header {
     background: $ui-base-color;
     border: 1px solid lighten($ui-base-color, 8%);
+
+    @media screen and (max-width: $no-gap-breakpoint) {
+      border: 0;
+    }
 
     .brand {
       &:hover,
@@ -594,6 +647,12 @@ html {
       .avatar img {
         border-color: $account-background-color;
       }
+
+      @media screen and (max-width: $no-columns-breakpoint) {
+        background: $account-background-color;
+        border: 1px solid lighten($ui-base-color, 8%);
+        border-top: 0;
+      }
     }
 
     &__tabs {
@@ -601,7 +660,21 @@ html {
         h1,
         h1 small {
           color: $white;
+
+          @media screen and (max-width: $no-columns-breakpoint) {
+            color: $primary-text-color;
+          }
         }
+      }
+    }
+
+    &__extra {
+      .public-account-bio {
+        border: 0;
+      }
+
+      .public-account-bio .account__header__fields {
+        border-color: lighten($ui-base-color, 8%);
       }
     }
   }
