--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -8,7 +8,7 @@
         %nav.header
           .nav-left
             = link_to root_url, class: 'brand' do
-              = image_pack_tag 'logo_full.svg', alt: 'Mastodon'
+              = image_pack_tag 'logo_full.svg', alt: 'iMastodon', height: 18
 
             = link_to t('directories.directory'), explore_path, class: 'nav-link optional' if Setting.profile_directory
             = link_to t('about.about_this'), about_more_path, class: 'nav-link optional'
