Bring back mascot on single column

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1833,6 +1833,12 @@ a.account__display-name {
         padding: 0 10px;
       }
     }
+
+    img.mascot-single {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
   }
 }
 
