--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2153,6 +2153,10 @@ a.account__display-name {
   .columns-area__panels__pane--compositional {
     display: none;
   }
+
+  img.mascot-single {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 600px + (285px * 1) + (10px * 1)) {
