--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2168,6 +2168,10 @@ a.account__display-name {
   .search-page .search {
     display: none;
   }
+
+  img.mascot-single {
+    width: calc((100% - (600px + (285px * 1))) / 2 + 285px);
+  }
 }
 
 @media screen and (max-width: 600px + (285px * 2) + (10px * 2)) {
@@ -2179,6 +2183,10 @@ a.account__display-name {
 @media screen and (min-width: 600px + (285px * 2) + (10px * 2)) {
   .tabs-bar {
     display: none;
+  }
+
+  img.mascot-single {
+    width: calc((100% - (600px + (285px * 2))) / 2 + 285px);
   }
 }
 
