stop reporting the total number of users/statuses in instance

--- a/app/views/about/more.html.haml
+++ b/app/views/about/more.html.haml
@@ -17,12 +17,10 @@
         .row__information-board
           .information-board__section
             %span= t 'about.user_count_before'
-            %strong= number_with_delimiter @instance_presenter.user_count
-            %span= t 'about.user_count_after', count: @instance_presenter.user_count
-          .information-board__section
-            %span= t 'about.status_count_before'
-            %strong= number_with_delimiter @instance_presenter.status_count
-            %span= t 'about.status_count_after', count: @instance_presenter.status_count
+            %strong= number_with_delimiter @instance_presenter.active_user_count
+            %span
+              = t 'about.active_count_after'
+              %abbr{ title: t('about.active_footnote') } *
         .row__mascot
           .landing-page__mascot
             = image_tag @instance_presenter.mascot&.file&.url || asset_pack_path('media/images/elephant_ui_plane.svg'), alt: ''
