--- a/app/views/admin/settings/edit.html.haml
+++ b/app/views/admin/settings/edit.html.haml
@@ -66,6 +66,9 @@
   .fields-group
     = f.input :profile_directory, as: :boolean, wrapper: :with_label, label: t('admin.settings.profile_directory.title'), hint: t('admin.settings.profile_directory.desc_html')
 
+  .fields-group
+    = f.input :antispam_enabled, as: :boolean, wrapper: :with_label, label: t('admin.settings.antispam_enabled.title'), hint: t('admin.settings.antispam_enabled.desc_html')
+
   %hr.spacer/
 
   .fields-group
