antispam → spam_check

--- a/app/views/admin/settings/edit.html.haml
+++ b/app/views/admin/settings/edit.html.haml
@@ -67,7 +67,7 @@
     = f.input :profile_directory, as: :boolean, wrapper: :with_label, label: t('admin.settings.profile_directory.title'), hint: t('admin.settings.profile_directory.desc_html')
 
   .fields-group
-    = f.input :antispam_enabled, as: :boolean, wrapper: :with_label, label: t('admin.settings.antispam_enabled.title'), hint: t('admin.settings.antispam_enabled.desc_html')
+    = f.input :spam_check_enabled, as: :boolean, wrapper: :with_label, label: t('admin.settings.spam_check_enabled.title'), hint: t('admin.settings.spam_check_enabled.desc_html')
 
   %hr.spacer/
 
